# teaching-deeplearning

./: .gitignore  README.md  pyproject.toml  requirements-dev.in  requirements-dev.txt
deeplearner/: __init__.py  perceptron.py
notebooks/: perceptron.ipynb
