# PACKAGE

## Based on: https://peps.python.org/pep-0621/#example
[project]
name = "deeplearner"
dynamic = ["version"]
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3"
]

dependencies = [
    "numpy>=1",
]

## Based on: https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html#dynamic-metadata
[tool.setuptools.dynamic]
version = {attr = "deeplearner.__version__"}

# INSTALL

## Based on: https://github.com/pypa/setuptools/blob/main/docs/userguide/quickstart.rst#basic-use
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]  # List of folders that contain the packages
include = ["deeplearner*"]  # Package names should match these glob patterns

## Optional install modes e.g. pip install deeplearner[dev]
[project.optional-dependencies]
notebook = ["ipykernel", "matplotlib>=3", "scikit-learn>=1.2", "seaborn>=0.10"]
test = ["pytest>=6"]
dev = ["ruff>=0.0.252", "pytest>=6", "pre-commit>=3.1", "ipykernel"]

# TESTING

[tool.pytest.ini_options]
testpaths = ["tests"]

# LINTING

# Ruff
[tool.ruff]
line-length = 80
select = [
  "E",
  "F",
  "W",
  "Q",
  "UP",
  "I",
  "N",
]
ignore = [
    "D100",  # Missing docstring in public module
    "D203",  # `one-blank-line-before-class` (D203) and `no-blank-line-before-class` (D211) are incompatible
    "D213",  # `multi-line-summary-first-line` (D212) and `multi-line-summary-second-line` (D213) are incompatible.
    "D406",  # Section name should end with a newline
    "D407",  # Missing dashed underline after section
    ]
target-version = "py310"
extend-exclude = ["venv"]  # Exclude
